fix industry align

--- a/_sass/_cover.scss
+++ b/_sass/_cover.scss
@@ -18,8 +18,8 @@ $height: 240px;
   @include media-query($on-laptop) {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-    padding-right:  $spacing-unit / 2;
-    padding-left:   $spacing-unit / 2;
+    padding-right:  calc($spacing-unit / 2);
+    padding-left:   calc($spacing-unit / 2);
   }
   @include media-query($on-palm) {
     height:         400px;
