--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -96,7 +96,7 @@
 
 .footer-heading {
   font-size: 18px;
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: calc($spacing-unit/2);
 }
 
 .contact-list,
@@ -107,7 +107,7 @@
 .footer-col {
   font-size:    18px;
   text-align: center;
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: calc($spacing-unit/2);
 }
 
 /**
